# promptward

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  biome.jsonc  deny.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/dashboard/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/dashboard/scripts/: sync-results.mjs
apps/dashboard/src/: App.tsx  api.ts  app.css  format.ts  index.css  main.tsx  types.ts
apps/dashboard/src/components/: primitives.tsx
apps/dashboard/src/data/: results.json  sampleRequests.ts
apps/dashboard/src/views/: CostSummary.tsx  Detection.tsx  FindingRow.tsx  RequestLog.tsx
apps/gateway/: package.json  tsconfig.json
apps/gateway/src/: config.test.ts  config.ts  cost.ts  index.test.ts  index.ts  pipeline.test.ts  pipeline.ts  policy.ts  scan.ts  store.test.ts  store.ts  types.ts  validate.ts
apps/gateway/src/providers/: anthropic.test.ts  anthropic.ts  openai.test.ts  openai.ts  shared.ts
crates/tripwire-core/: Cargo.toml  build.rs  package.json
crates/tripwire-core/src/: decode.rs  exfil.rs  injection.rs  lib.rs  markdown.rs  node.rs  normalize.rs  types.rs
docs/: SPEC.md
evals/: package.json  results.json  run.ts
evals/datasets/: benign.jsonl  exfiltration.jsonl  injection.jsonl
