[package]
name = "tripwire-core"
version = "0.0.0"
edition = "2021"
description = "Fast detection core for promptward: prompt-injection heuristics + secret/PII exfiltration scanning + unicode-smuggling/decode passes."
license = "MIT"

# Pure scanner logic builds as an rlib and is unit-tested by `cargo test` with no
# Node dependency. The `node` feature pulls in napi-rs and compiles the cdylib
# addon (built via @napi-rs/cli -> @promptward/tripwire). Keep the hot path lean.
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
node = ["dep:napi", "dep:napi-derive"]

[dependencies]
aho-corasick = "1"
regex = "1"
once_cell = "1"
unicode-normalization = "0.1"
base64 = "0.22"
napi = { version = "3", features = ["napi9"], optional = true }
napi-derive = { version = "3", features = ["type-def"], optional = true }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
